# llm-system-containers

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
.github/workflows/: ci.yml  e2e.yml  m5.yml
crates/llmsc/: Cargo.toml
crates/llmsc-core/: Cargo.toml
crates/llmsc-core/src/: bootstrap.rs  config.rs  deploy.rs  display.rs  enforce.rs  error.rs  incus.rs  keystore.rs  lib.rs  process.rs  profile.rs  progress.rs  reconcile.rs  service.rs  tetragon.rs  vm.rs
crates/llmsc-core/src/snapshots/: llmsc_core__config__tests__toml_snapshot.snap
crates/llmsc/src/: main.rs
crates/llmsc/tests/: cli.rs
crates/llmsctl/: Cargo.toml
crates/llmsctl/src/: main.rs
crates/llmsctl/tests/: cli.rs
gui/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
gui/src/: App.svelte  app.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs
gui/src/lib/: ActivityDrawer.svelte  ActivityDrawer.test.ts  BuildImage.svelte  BuildImage.test.ts  CommandPalette.svelte  CommandPalette.test.ts  ConfirmModal.svelte  ConfirmModal.test.ts  Copy.svelte  Copy.test.ts  FetchError.svelte  Icon.svelte  Modal.svelte  NewSandbox.svelte  NewSandbox.test.ts  Progress.svelte  Progress.test.ts  Skeleton.svelte  Skeleton.test.ts  SortHeader.svelte  Terminal.svelte  Terminal.test.ts  Toast.svelte  Toast.test.ts  (+6 more)
mockups/: README.md  index.html
mockups/a-devtool/: NOTES.md  index.html
mockups/b-approachable/: NOTES.md  app.css  app.js  icons.js  index.html
mockups/c-controlroom/: NOTES.md  app.js  index.html  styles.css  wizard.html
mockups/name-banner/: README-snippet.md  README.md  generate.py  preview.html
mockups/name-tokens/: index.html
mockups/name-tokens-llm-span/: index.html
mockups/nested-simple/: index.html
mockups/nested-view/: NOTES.md  index.html
mockups/networking/: NOTES.md  index.html
mockups/security/: NOTES.md  index.html
planning/: README.md  agent-profiles.md  buildout.md  coding-agents.md  custom-images.md  file-transfer.md  interfaces.md  mvp.md  naming.md  open-questions.md  overview.md  principles.md  security-model.md  spike-plan.md  tech-stack.md  testing-e2e.md  testing.md
planning/architecture/: app-containers.md  networking.md  playground-vm.md  sandbox-containers.md  service-containers.md  system-containers.md  vm.md
planning/research/: litellm-claude-subscription.md
planning/services/: README.md  _future.md  llm-proxy.md  m5-done-when-testplan.md  network-inspection.md  observability.md  shared-storage.md
planning/spikes/: remote-display-gui.md
scripts/: README.md  e2e.py  m5_litellm_phoenix.py  spike.py
scripts/spikes/: remote-display-spike.sh  remote-display-sshx.sh
(+30 files in other folders)
