[workspace]
resolver = "2"
members = ["crates/llmsc-core", "crates/llmsc", "crates/llmsctl"]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Colin Harrington and llm-system-containers contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
# dev / test
insta = "1"
proptest = "1"
assert_cmd = "2"
predicates = "3"
