[package]
name = "llmsc-gui"
version = "0.0.0"
description = "GUI for llm-system-containers"
authors = ["Colin Harrington and llm-system-containers contributors"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.85"

# Standalone workspace on purpose: keeps the core cargo workspace (and its CI) from having to
# build the webkit-dependent GUI. The path-dep to llmsc-core still resolves.
[workspace]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
llmsc-core = { path = "../../crates/llmsc-core" }
